Updated layout, fixed text alignment

--- a/Day17/styles.css
+++ b/Day17/styles.css
@@ -1,27 +1,28 @@
 img
 {
-  width:40%;
+  height:100%;
   position:fixed;
-  bottom: 10%;
-  left: -10%;
+  left:0%;
 }
 body
 {
   background-color:#eeeeee;
   font-family:Raleway;
+  text-align:center;
+  margin:0px;
 }
 #links
 {
   position:fixed;
   width:60%;
   bottom:30%;
-  right:0px;
-  text-align:right;
+  right:20px;
+  text-align:left;
 }
 a
 {
   font-weight: 100;
-  margin:20px;
+  margin-left:20px;
   font-size:25px;
   text-decoration: none;
 }
@@ -34,8 +35,6 @@ h1
 {
   font-size:50px;
   font-weight: 200;
-  position:fixed;
   top:30%;
-  right:20px;
-  text-align:right;
+  position:relative;
 }
